# arrow-list

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  arrow-list.cabal
src/Control/Arrow/: ArrowF.hs  ArrowKleisli.hs  ArrowList.hs  Functor.hs  Instances.hs  List.hs  Sequence.hs
src/Control/Arrow/Kleisli/: Class.hs
src/Control/Arrow/List/: Class.hs  Ordered.hs
src/Control/Arrow/ListLike/: Class.hs
src/Control/Monad/: Sequence.hs
src/Data/List/: Ordered.hs
tests/: .ghci  Tests.hs  make.sh
